--- a/starship.toml
+++ b/starship.toml
@@ -1,18 +1,18 @@
 add_newline = false
 
 [character]
-success_symbol = "[>](bold fg:245)"
+success_symbol = "[>](bold yellow)"
 error_symbol = "[✗](bold red)"
 
 [directory]
-style= "bold fg:245"
+style= "bold yellow"
 
 [git_branch]
 truncation_length = 40
 style= "bold yellow"
 
 [git_status]
-style = 'bold fg:245'
+style = 'fg:244'
 ahead = "[↑](bold cyan)$count"
 behind = "[↓](bold cyan)$count"
 stashed = "[@](bold cyan)$count"
