Set enabled modules explicitly

--- a/starship.toml
+++ b/starship.toml
@@ -1,5 +1,45 @@
 add_newline = false
 
+format = """
+$username\
+$hostname\
+$shlvl\
+$kubernetes\
+$directory\
+$git_branch\
+$git_commit\
+$git_state\
+$git_status\
+$hg_branch\
+$docker_context\
+$dart\
+$golang\
+$helm\
+$kotlin\
+$nodejs\
+$python\
+$ruby\
+$rust\
+$terraform\
+$nix_shell\
+$conda\
+$memory_usage\
+$aws\
+$gcloud\
+$openstack\
+$env_var\
+$crystal\
+$custom\
+$cmd_duration\
+$line_break\
+$lua\
+$jobs\
+$battery\
+$time\
+$status\
+$shell\
+$character"""
+
 [character]
 success_symbol = "[>](bold yellow)"
 error_symbol = "[✗](bold red)"
@@ -23,11 +63,3 @@ staged = '[M](bold green)$count'
 untracked = '[?](bold red)$count'
 deleted = "[D](bold red)$count"
 
-[java]
-disabled = true
-
-[lua]
-disabled = true
-
-[package]
-disabled = true
